# HighPerformanceComputing

./: README.md
1. Matrix multiplication in OpenMP/: CMakeLists.txt  _readme_lab1.md  main.cpp
1. Matrix multiplication in OpenMP/Matrix/: Matrix.cpp  Matrix.h
1. Matrix multiplication in OpenMP/_results/: Dynamic.csv  Dynamic.md  Guided.csv  Guided.md  Runtime.csv  Static.csv  Static.md  WithoutOmp.csv  WithoutOmp.md  all.csv  all.md
1. Matrix multiplication in OpenMP/test/: matrixTest.cpp
2. Definite integral calculation/: CMakeLists.txt  _readme_lab2.md  main.cpp  mainInWork.cpp
2. Definite integral calculation/Integral/: Integral.cpp  Integral.h
